[package]
name = "cross-windows"
version = "0.1.0"
authors = ["John Doe <example@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rmp-serde = "0.15.4"
#serde-big-array = "0.3.2"
serde = { version = "1.0.125", features = [ "derive" ] }
